# xcloud

./: .gitignore  Cargo.toml  LICENSE  README.md  release.sh
.github/workflows/: brew-release.yml  ci.yml
Formula/: xcloud.rb
src/: asc.rs  cli.rs  lib.rs  main.rs  util.rs
tests/: cli_tests.rs  helpers_tests.rs  http_mock_tests.rs  unit_tests.rs  util_tests.rs
