[package]
name = "xcloud"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.39", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9"
time = { version = "0.3", features = ["formatting"] }
dialoguer = "0.11"
indicatif = "0.17"
url = "2.5"

[features]
default = []
http-mock = ["dep:httpmock"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
httpmock = { version = "0.7", optional = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
serde_json = "1.0"
